(lang dune 3.11)

(using melange 0.1)

(using dune_site 0.1)

(generate_opam_files true)

(package
 (name hx)
 (depends
  (ocaml
   (>= 5.1))
  dune
  realm
  dream
  react)
 (sites
  (share static)))

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (format
   (run ocamlformat-mlx %{input-file}))
  (preprocess
   (run mlx-pp %{input-file}))))
