(lang dune 3.11)

(using melange 0.1)

(using dune_site 0.1)

(generate_opam_files true)

(source
 (github andreypopp/reactor))

(authors "Andrey Popp")

(maintainers "Andrey Popp")

(license LICENSE)

(package
 (name react)
 (depends
  (ocaml
   (>= 5.1))
  (melange
   (>= 2))
  dune
  reason-react
  remote
  realm
  containers
  lwt
  ppxlib
  yojson))
