(library
 (name react_server)
 (public_name react.server)
 (modules :standard \ react)
 (libraries react_api containers yojson lwt lwt.unix remote.native env_native))

(library
 (name react_browser_server)
 (public_name react.browser_server)
 (wrapped false)
 (modules react)
 (libraries react_server))
