(library
 (name remote_browser)
 (public_name remote.browser)
 (modes melange)
 (modules remote_browser)
 (flags :standard -open Env_browser)
 (libraries melange-fetch yojson env_browser)
 (preprocess
  (pps melange.ppx)))

(library
 (name remote_native)
 (public_name remote.native)
 (modes native)
 (modules remote_native)
 (flags :standard -open Env_native)
 (libraries containers hmap yojson env_native))

(library
 (name remote_ppx)
 (public_name remote.ppx)
 (modules ppx)
 ; (flags :standard -w -9)
 (libraries ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_rewriter))

(executable
 (name ppx_test)
 (modules ppx_test)
 (libraries remote_ppx ppxlib))

; (cram
;  (deps ./ppx_test_runner ./ppx_test.exe ../.ocamlformat))
