(library
 (name remote_ppx)
 (public_name remote.ppx)
 (modules ppx)
 ; (flags :standard -w -9)
 (libraries ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_rewriter))

(executable
 (name ppx_test)
 (modules ppx_test)
 (libraries remote_ppx deriving_of_melange_json deriving_to_melange_json ppxlib))

; (cram
;  (deps ./ppx_test_runner ./ppx_test.exe ../.ocamlformat))
