(library
 (name trepr)
 (modules
  :standard
  \
  ppx_yojson
  ppx_melange
  deriving_of_yojson
  deriving_to_yojson
  deriving_of_melange_json
  deriving_to_melange_json)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries containers ppxlib))

(library
 (name deriving_of_yojson)
 (modules deriving_of_yojson)
 (libraries trepr ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (name deriving_to_yojson)
 (modules deriving_to_yojson)
 (libraries trepr ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (name deriving_to_melange_json)
 (modules deriving_to_melange_json)
 (libraries trepr ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (name deriving_of_melange_json)
 (modules deriving_of_melange_json)
 (libraries trepr ppxlib containers)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(executable
 (name ppx_yojson)
 (modules ppx_yojson)
 (libraries deriving_of_yojson deriving_to_yojson ppxlib))

(executable
 (name ppx_melange)
 (modules ppx_melange)
 (libraries deriving_of_melange_json deriving_to_melange_json ppxlib))
