(library
 (name api_native)
 (wrapped false)
 (libraries lwt dream remote_native realm_native)
 (flags :standard -open Realm)
 (preprocess
  (per_module
   ((pps remote_ppx ppx_deriving_yojson)
    api_spec)))
 (modes native))

(subdir
 browser
 (library
  (name api_browser)
  (wrapped false)
  (modes melange)
  (flags :standard -open Realm)
  (libraries remote_browser realm_browser)
  (preprocess
   (pps melange.ppx ppx_deriving_melange_json remote_ppx -js)))
 (rule
  (target api.ml)
  (deps ../api_spec.ml)
  (action
   (copy# ../api_spec.ml %{target}))))
