(library
 (name api_native)
 (wrapped false)
 (libraries lwt dream remote.native realm.native)
 (flags :standard -open Realm)
 (preprocess
  (per_module
   ((pps remote.ppx ppx_deriving_json.native)
    api_spec)))
 (modes native))

(subdir
 browser
 (library
  (name api_browser)
  (wrapped false)
  (modes melange)
  (flags :standard -open Realm)
  (libraries remote.browser realm.browser)
  (preprocess
   (pps melange.ppx ppx_deriving_json.browser remote.ppx -js)))
 (rule
  (target api.ml)
  (deps ../api_spec.ml)
  (action
   (copy# ../api_spec.ml %{target}))))
