(library
 (name example)
 (libraries react_browser api_browser remote_browser env_browser)
 (flags :standard -open Env)
 (modes melange)
 (preprocess
  (pps melange.ppx react_ppx)))

(subdir
 native
 (library
  (name example_native)
  (modes native)
  (libraries
   react_server
   ppx_yojson_conv_lib
   remote_native
   env_native
   api_native)
  (flags :standard -open Env)
  (preprocess
   (pps react_ppx -native ppx_yojson_conv)))
 (copy_files#
  (files ../**[!.pp].ml)))

(melange.emit
 (target output)
 (modules)
 (libraries example)
 (module_systems commonjs))

(rule
 (target ./__boot.js)
 (deps ./output/example/browser/example.js)
 (action
  (with-stdout-to
   %{target}
   (progn
    (run echo "import './output/example/browser/example.js';")
    (run echo "import '%{lib-private:react_browser:runtime.js}';")))))

(rule
 (target ./bundle.js)
 (deps
  (universe)
  (source_tree ./output/example/browser/example)
  ./output/example/browser/example.js
  ./__boot.js)
 (action
  (run
   esbuild
   --log-level=warning
   --bundle
   --loader:.js=jsx
   --outfile=%{target}
   ./__boot.js)))

(install
 (package react_example)
 (section
  (site
   (react_example static)))
 (files
  bundle.js
  (static/tachyons.css as bundle.css)))
