(library
 (name example)
 (wrapped false)
 (libraries
  melange.dom
  react_browser
  api_browser
  remote.browser
  realm.browser
  melange-webapi)
 (flags :standard -open Realm)
 (modes melange)
 (preprocess
  (pps melange.ppx react_ppx ppx_deriving_melange_json)))

(subdir
 native
 (library
  (name example_native)
  (wrapped false)
  (modes native)
  (libraries react.browser_server remote.native realm.native api_native)
  (flags :standard -open Realm)
  (preprocess
   (pps react_ppx -native ppx_deriving_yojson)))
 (copy_files#
  (files ../**[!.pp][!.mlx].ml))
 (copy_files#
  (files ../**.mlx)))

(melange.emit
 (alias browser_js)
 (target output)
 (modules)
 (libraries example)
 (module_systems commonjs))

(rule
 (target ./__boot.js)
 (deps ./output/example/browser/example.js)
 (action
  (with-stdout-to
   %{target}
   (progn
    (run echo "import './output/example/browser/example.js';")
    (run
     echo
     "import '%{lib-private:react_browser:react_browser_runtime.js}';")))))

(rule
 (target ./bundle.js)
 (deps
  %{lib-private:react_browser:react_browser_runtime.js}
  (alias browser_js))
 (action
  (run
   esbuild
   --log-level=warning
   --bundle
   --loader:.js=jsx
   --outfile=%{target}
   ./__boot.js)))

(install
 (package react_example)
 (section
  (site
   (react_example static)))
 (files
  bundle.js
  (static/tachyons.css as bundle.css)))
