(lang dune 3.11)

(package
 (name react_example_server_only)
 (depends
  (ocaml
   (>= 5.1))
  (dune (= "3.15.0+merlin-reader"))
  dream
  lwt
  mlx
  ocamlmerlin-mlx
  ocamlformat
  ocamlformat-mlx
  ocaml-lsp-server))

(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (merlin_reader mlx)
  (format
   (run ocamlformat-mlx %{input-file}))
  (preprocess
   (run mlx-pp %{input-file}))))
