(executable
 (name main)
 (public_name react-example)
 (package react_example)
 (libraries
  api_native
  react.server
  react_dream
  dream
  example_native
  dune-site)
 (flags :standard -alert ++browser_only)
 (preprocess
  (pps react.ppx -native ppx_deriving_json.native)))

(generate_sites_module
 (module static)
 (sites react_example))
