(library
 (public_name ppx_deriving_json.native)
 (name ppx_deriving_json_native)
 (modules ppx_deriving_json_native)
 (libraries ppx_deriving_schema ppxlib containers)
 (ppx_runtime_libraries ppx_deriving_json.native_runtime)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_deriver))

(library
 (public_name ppx_deriving_json.native_runtime)
 (name ppx_deriving_json_native_runtime)
 (wrapped false)
 (modules ppx_deriving_json_runtime)
 (libraries yojson))

(executable
 (name ppx_deriving_json_native_test)
 (modules ppx_deriving_json_native_test)
 (libraries ppx_deriving_json.native ppxlib))
