(library
 (public_name react.browser)
 (name react_browser)
 (wrapped false)
 (flags :standard -open Realm)
 (modes melange)
 (libraries melange.dom realm.browser reason-react melange-fetch)
 (preprocess
  (pps melange.ppx)))

(install
 (files
  (react_browser_runtime.js as browser/react_browser_runtime.js))
 (section lib)
 (package react))
