(library
 (public_name react.ppx)
 (name react_ppx)
 (modules :standard \ ppx_test)
 ; (flags :standard -w -9)
 (libraries ppxlib)
 (preprocess
  (pps ppxlib.metaquot))
 (kind ppx_rewriter))

(executable
 (name ppx_test)
 (modules ppx_test)
 (libraries react_ppx ppxlib))

(cram
 (deps ./ppx_test_runner ./ppx_test.exe ../../.ocamlformat))
