(library
 (name react_server)
 (public_name react.server)
 (modules :standard \ react reactDOM)
 (flags :standard -open Realm)
 (libraries
  react_api
  containers
  yojson
  lwt
  lwt.unix
  remote.native
  realm.native))

(library
 (name react_browser_server)
 (public_name react.browser_server)
 (wrapped false)
 (flags :standard -open Realm)
 (modules react reactDOM)
 (libraries react_server realm.native))
