(melange.emit
 (target output)
 (libraries react_browser)
 (preprocess
  (pps melange.ppx react_ppx))
 (module_systems commonjs))

(rule
 (target ./__boot.js)
 (deps ./output/react_example/browser/example.js)
 (action
  (with-stdout-to
   %{target}
   (progn
    (run echo "import './output/react_example/browser/example.js';")
    (run echo "import '%{lib-private:react_browser:runtime.js}';")))))

(rule
 (target ./bundle.js)
 (deps
  ./__boot.js
  %{lib-private:react_browser:runtime.js}
  (source_tree .))
 (action
  (run
   esbuild
   --log-level=warning
   --bundle
   --loader:.js=jsx
   --outfile=%{target}
   ./__boot.js)))

(install
 (package react_example)
 (section
  (site
   (react_example static)))
 (files
  bundle.js
  (static/tachyons.css as bundle.css)))
