(executable
 (name main)
 (public_name react-example)
 (package react_example)
 (libraries react_server react_dream dream example_native dune-site omd)
 (flags :standard -alert ++browser_only)
 (preprocess
  (pps react_ppx -native ppx_yojson_conv)))

(generate_sites_module
 (module static)
 (sites react_example))
