(executable
 (name main)
 (public_name react-example-rsc-ssr)
 (package react-example-rsc-ssr)
 (libraries
  routing_native
  react_server
  react_dream
  data_native
  dream
  example_native
  dune-site)
 (flags :standard -alert ++browser_only)
 (preprocess
  (pps react_server.ppx -native ppx_deriving_json.native)))

(generate_sites_module
 (module static)
 (sites react-example-rsc-ssr))
