(library
 (name browser)
 (wrapped false)
 (libraries
  melange.dom
  react_browser
  remote.browser
  routing_browser
  realm.browser
  melange-webapi)
 (flags
  :standard
  -open=Realm
  -open=React_browser
  -open=Ppx_deriving_json_runtime.Primitives
  -alert
  ++browser_only)
 (modes melange)
 (preprocess
  (pps melange.ppx react_server.ppx ppx_deriving_json.browser)))

(melange.emit
 (alias browser_js)
 (target output)
 (modules)
 (libraries browser)
 (module_systems commonjs))

(rule
 (target ./__boot.js)
 (deps
  (:entry ./output/example/rsc/browser/browser.js)
  (:runtime %{lib:react_browser:browser/react_browser_runtime.js}))
 (action
  (with-stdout-to
   %{target}
   (progn
    (run echo "import './%{entry}';")
    (run echo "import './%{runtime}';")))))

(rule
 (target ./bundle.js)
 (deps
  %{lib:react_browser:browser/react_browser_runtime.js}
  (alias browser_js))
 (action
  (run
   esbuild
   --log-level=warning
   --bundle
   --loader:.js=jsx
   --outfile=%{target}
   ./__boot.js)))

(install
 (package react-example-rsc)
 (section
  (site
   (react-example-rsc static)))
 (files
  bundle.js
  (static/tachyons.css as bundle.css)))
