(executable
 (name main)
 (public_name react-example-rsc)
 (package react-example-rsc)
 (libraries routing_server react_server react_dream dream dune-site)
 (flags
  :standard
  -open=Realm
  -open=React_server
  -open=Ppx_deriving_json_runtime.Primitives
  -alert
  ++browser_only)
 (preprocess
  (pps react_server.ppx -native-export-only ppx_deriving_json.native)))

(copy_files#
 (only_sources)
 (files ../browser/browser.mlx))

(generate_sites_module
 (module static)
 (sites react-example-rsc))
